--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^14.4.0",
     "serverless-offline-watcher": "^1.1.0"
@@ -11,9 +12,13 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.6.0",
-    "express": "^5.1.0"
+    "nodemon": "^3.1.10",
+    "serverless": "^4.19.1"
   },
   "scripts": {
-    "dev": "serverless offline start"
+    "dev": "serverless offline start",
+    "debug": "export SLS_DEBUG=* && node --inspect node_modules/serverless/run.js offline start",
+    "format": "deno check && deno fmt",
+    "watch:format": "nodemon --ext ts,tsx,js,json --exec \"npm run format\""
   }
 }
