--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,15 +34,19 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
 
     // Other
-
     "noEmit": true,
     "allowImportingTsExtensions": true
-  }
+  },
+
+  "exclude": [
+    "node_modules",
+    ".serverless/build"
+  ]
 }
