--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "dev": "serverless offline start",
     "debug": "export SLS_DEBUG=* && node --inspect node_modules/serverless/run.js offline start",
-    "format": "deno check && deno fmt",
+    "format": "tsc && deno check && deno fmt",
     "watch:format": "nodemon --ext ts,tsx,js,json --exec \"npm run format\""
   }
 }
